# ChangeLog for sys-devel/ct-ng
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.24 2011/11/21 10:17:00 blueness Exp $

*ct-ng-1.13.2 (21 Nov 2011)

  21 Nov 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.13.2.ebuild:
  Version bump

  14 Nov 2011; Anthony G. Basile <blueness@gentoo.org> ChangeLog:
  Fix failure to gpg sign manifest

  14 Nov 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.12.2.ebuild,
  -ct-ng-1.12.3.ebuild:
  Remove deprecated versions

*ct-ng-1.13.1 (14 Nov 2011)

  14 Nov 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.13.1.ebuild:
  Version bump

*ct-ng-1.13.0 (25 Oct 2011)

  25 Oct 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.13.0.ebuild:
  Version bump

*ct-ng-1.12.4 (12 Oct 2011)

  12 Oct 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.4.ebuild:
  Version bump

*ct-ng-1.12.3 (25 Sep 2011)

  25 Sep 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.3.ebuild:
  Version bump

  13 Sep 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.12.0.ebuild,
  -ct-ng-1.12.1.ebuild:
  Removed deprecated versions

*ct-ng-1.12.2 (11 Sep 2011)

  11 Sep 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.2.ebuild:
  Version bump and add bash-completion-r1

*ct-ng-1.12.1 (24 Aug 2011)

  24 Aug 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.1.ebuild:
  Version bump

*ct-ng-1.12.0 (01 Aug 2011)

  01 Aug 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.12.0.ebuild:
  Version bump

*ct-ng-1.11.3 (30 May 2011)

  30 May 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.11.1.ebuild,
  -ct-ng-1.11.2.ebuild, +ct-ng-1.11.3.ebuild:
  Version bump and removed deprecated

*ct-ng-1.11.2 (19 May 2011)

  19 May 2011; Anthony G. Basile <blueness@gentoo.org> +ct-ng-1.11.2.ebuild:
  Version bump

  03 May 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.8.0.ebuild,