@@ -4,7 +4,6 @@ Hash: SHA256
 DIST crosstool-ng-1.10.1.tar.bz2 1820729 RMD160 709fc7fda63e5ed9cbcfb99f47516515b0f82ff1 SHA1 5e83c4e82612190a0cc70d916aa86367318c3da7 SHA256 f16bd23d7c4a01b959de3c186fcd0d61823ef154733513819a5421a70d302ceb
 DIST crosstool-ng-1.11.3.tar.bz2 1840251 RMD160 730ef47ca62ee21a1a1ada84a35e2cedb0df1237 SHA1 a6b7ecf2ad4aef65345be42850d0776c2755f71b SHA256 7af26ad0e50a278a652c1ea230c7e2fb14e86ad2172f26e370179aaa93fac900
 DIST crosstool-ng-1.12.4.tar.bz2 1876133 RMD160 e83804a194f5d8baf128cf34cf59a2da615b63d8 SHA1 e96a65869658c621254b8b75e3fbc53af218177e SHA256 93e90fce93d09d99032f5b04a01f1f503a068ebfa7ba94dca37b2fc598032f98
-DIST crosstool-ng-1.13.0.tar.bz2 1873960 RMD160 ee478138994f5d1d8f14d64b0591b5f466bd7baf SHA1 fc3ab0b495c373febd588dcf5646b359c53e2a7b SHA256 21bdb4306306472fa8992c3fbf3751c5447631fdb5360e1069e93e6ac7c6b47d
 DIST crosstool-ng-1.13.1.tar.bz2 1875638 RMD160 8ab5b2312911e03f9f6f189b2a2c1d300b4f33c7 SHA1 129a9db08f2c4ef74b89fc3ec03c05222842391b SHA256 5a85e4fd48f53ad51e5d960df5e32a49937d89cd0c92029245f868a3310e0b5c
 DIST crosstool-ng-1.13.2.tar.bz2 1874757 RMD160 0d92808881999304072d8f5612720b48e5ec3b9c SHA1 07bc21a771a3698193a5fc683becdd05767cc9ed SHA256 3b6f89690d2bbcc43eee98e851bd8d91fa595958976fef6eb69d3fb97507315f
 DIST crosstool-ng-1.8.2.tar.bz2 1803262 RMD160 6576b729a5650552768044280e186ae5e5f1a683 SHA1 921b5261ab2285348d828171ceb62f515097206d SHA256 371fde1c4ec7b5803fb418715fc9c2243984295bbf549735a419f2b9a8888cb2
@@ -12,17 +11,16 @@ DIST crosstool-ng-1.9.2.tar.bz2 1833654 RMD160 8a7ea4ac595b23dc2d4820c14e012b067
 EBUILD ct-ng-1.10.1.ebuild 749 RMD160 96cadeccd565d772e870ccb716029a37d5c2ba65 SHA1 982837bb5ecdde8349ddfeba3f9f036a0faf8533 SHA256 4529679aa107c52c6dca0d034bc9d19d58db2406e8544b5f864affa8d0b248ee
 EBUILD ct-ng-1.11.3.ebuild 749 RMD160 5427392947322a852a51c8d017977f5a89b6f2cb SHA1 00afbab58c84750584bffeda9a5b16828d188972 SHA256 57a8ce38076dac9e99efc46f580bb5a3a3b8114fac483e090e38539e55c36174
 EBUILD ct-ng-1.12.4.ebuild 756 RMD160 84b617a5ca2c09985fcab5f6ce122299068fe6a6 SHA1 ed9d34b30ecb5fe24031f5274805e4dcd0b3be7a SHA256 13482003fa2778b08579ed8664fcc63685e3b8e943968df7fd6a295a3c3b0273
-EBUILD ct-ng-1.13.0.ebuild 756 RMD160 b7f3e62a02cde0400b0037b5832aec6cb3c26e91 SHA1 d3bc2eb1c0daa1e94c16dbdf2ef450d60307bf74 SHA256 4182c11a8fb4eba1c345d443f3a913f17917da55f85765e093454f1927ebbf6c
 EBUILD ct-ng-1.13.1.ebuild 756 RMD160 057b4022bf003bf611ca1633cf3f32384fe75853 SHA1 262ccf4e32c45a421f1694ef65bacca42754a800 SHA256 b8cfb005583d47c604de90998b760075b3879dbb184efeb9ff032ae918cc4b93
 EBUILD ct-ng-1.13.2.ebuild 756 RMD160 7c2e5993e8dc01ccd8c8cab14875bd2a7a15eb88 SHA1 c77d82f661b673b1f562aec423d17c6a78bf20da SHA256 d1bb22f46d578e6950ea5df0eb15ab8e4d9d42705feb7ef9f68b2f12d8e100f4
 EBUILD ct-ng-1.8.2.ebuild 750 RMD160 6db6f470791a19c1cb633008d5104eab5b5d0819 SHA1 ff896879ab6b7574756ca774e8b5f72779dc3fc0 SHA256 114faba91443e29f8b6e05aa7d9bd3c35d5239319b099eddb15ebfb4ad405cd2
 EBUILD ct-ng-1.9.2.ebuild 748 RMD160 f02b1f03f5a9c22df5d6442bfc5986988d69c0ec SHA1 5d18311dcc59333a86b8a5543f5bdb39e93e1675 SHA256 84cd1c3838a66d3802d562cf7a81461385986e259297c13cf82d6e414c5ee359
-MISC ChangeLog 3645 RMD160 91973598597dd88882ccf4d2bd8ca05280491e08 SHA1 a4e5018c15cf7e35d2faa8115c17b0058d246af5 SHA256 c6ff38f4c89383d3ec9f3ebbf50f5b4033e595c92e95ffffcfda1ee3751e3cc9
+MISC ChangeLog 3762 RMD160 71d67d6684f313c36451fefbe01d3d514f523bdc SHA1 d2c5bab3a7107df04bc55470ee18db1b73048e48 SHA256 dd528844b6f8ac7183c9d0a0a4f9a42a37eca50289b485f865588015e8511703
 MISC metadata.xml 569 RMD160 4ea035522ebc9db1ad9fbf6dfe05e10967990053 SHA1 040594b6e428e12deeb55aeaedb45d4150fda4fc SHA256 bc836c260292879834f15c4b7b1c52ab806141d5ac73ae99b01ac1a1b6d80af2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk7KJSYACgkQl5yvQNBFVTU6igCfXYIiYzC7+2Y8w9lHe/gGE3qd
-frgAnA3btzhZNBP2H20Lt2HWziAyd1bA
-=OE5G
+iEYEAREIAAYFAk7KJZYACgkQl5yvQNBFVTX4bwCeKZqlAOrXrh477wGTudRG7hZy
+9hMAnRmKGU6NyZoQH8qHvB3wEcK46J3w
+=Y9Zi
 -----END PGP SIGNATURE-----
