@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/ct-ng
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.24 2011/11/21 10:17:00 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/ct-ng/ChangeLog,v 1.25 2011/11/21 10:18:50 blueness Exp $
+
+  21 Nov 2011; Anthony G. Basile <blueness@gentoo.org> -ct-ng-1.13.0.ebuild:
+  Removed older version in 1.13 series
 
 *ct-ng-1.13.2 (21 Nov 2011)
 
